--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ email: jerome.l.grosse@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Metal Gear Solid Transcript in Japanese and English along
   with vocabulary extracted from the transcripts
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/scissors61" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 author:
   name:
